# multipass-lab

./: .gitignore  CLAUDE.md  Justfile  README.md
.github/workflows/: ci.yml
clusters/centralized_logging/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
clusters/centralized_logging/cloud-init/: central.yaml.tftpl  docker-client.yaml.tftpl  k0s-client.yaml.tftpl
clusters/centralized_logging/cloud-init/docker/: compose.yaml.tftpl
clusters/centralized_logging/cloud-init/syslog-ng/: client.conf.tftpl  server.conf.tftpl
clusters/centralized_logging/tests/testinfra/: conftest.py  pyproject.toml  test_central.py  test_clients.py  test_e2e_shipping.py
clusters/centralized_logging/tests/tofu/: sizing_and_render.tftest.hcl
specs/: centralized_logging.md
